{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 138,
  "lineage": "f7aaa8b2-9a59-ebd0-2b0e-810a4e6daf89",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group/sg-0eec85da177353553",
            "description": "SDJ",
            "filter": null,
            "id": "sg-0eec85da177353553",
            "name": "let it come",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "【defaul】letitcome"
            },
            "timeouts": null,
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "all-in-one-public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1207491f6ae0a8d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-034d7025dba647e8a",
            "subnet_id": "subnet-0143c3c71866c8afc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:subnet/subnet-0143c3c71866c8afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0143c3c71866c8afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064255164072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "subnet-0143c3c71866c8afc",
            "region": "ap-northeast-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet1[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:subnet/subnet-01cb8d0fde70c4da2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb8d0fde70c4da2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064255164072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "【default】subnet1"
            },
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet1[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08f0737412a47a5ed",
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:instance/i-0b9af1c41750fe1ef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9af1c41750fe1ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Kissme",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f80b478759bcf6b7"
              }
            ],
            "primary_network_interface_id": "eni-0f80b478759bcf6b7",
            "private_dns": "ip-172-31-1-127.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.127",
            "public_dns": "ec2-54-238-94-191.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.94.191",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac7598cab52ed812",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance_subnet1-20260111052317616000000001",
              "let it come"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cb8d0fde70c4da2",
            "tags": {
              "Name": "public_instance_subnet1"
            },
            "tags_all": {
              "Name": "public_instance_subnet1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "public_instance_subnet1"
            },
            "vpc_security_group_ids": [
              "sg-0eec85da177353553",
              "sg-0ff070a0e0001f08b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "i-0b9af1c41750fe1ef",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "data.aws_security_group.existing_sg",
            "module.ec2_instance_subnet1.aws_iam_instance_profile.this",
            "module.ec2_instance_subnet1.aws_iam_role.this",
            "module.ec2_instance_subnet1.aws_security_group.this",
            "module.ec2_instance_subnet1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance_subnet1.data.aws_partition.current",
            "module.ec2_instance_subnet1.data.aws_ssm_parameter.this",
            "module.ec2_instance_subnet1.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet1[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group/sg-0ff070a0e0001f08b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ff070a0e0001f08b",
            "ingress": [],
            "name": "public_instance_subnet1-20260111052435414800000001",
            "name_prefix": "public_instance_subnet1-",
            "owner_id": "064255164072",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_instance_subnet1"
            },
            "tags_all": {
              "Name": "public_instance_subnet1"
            },
            "timeouts": null,
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sg-0ff070a0e0001f08b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.ec2_instance_subnet1.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet1[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group-rule/sgr-007a459dc2f3ee61c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-007a459dc2f3ee61c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ff070a0e0001f08b",
            "security_group_rule_id": "sgr-007a459dc2f3ee61c",
            "tags": {
              "Name": "public_instance_subnet1-ipv4_default"
            },
            "tags_all": {
              "Name": "public_instance_subnet1-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sgr-007a459dc2f3ee61c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.ec2_instance_subnet1.aws_security_group.this",
            "module.ec2_instance_subnet1.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group-rule/sgr-00698110eb30ea6e8",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-00698110eb30ea6e8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ff070a0e0001f08b",
            "security_group_rule_id": "sgr-00698110eb30ea6e8",
            "tags": {
              "Name": "public_instance_subnet1-ipv6_default"
            },
            "tags_all": {
              "Name": "public_instance_subnet1-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sgr-00698110eb30ea6e8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.ec2_instance_subnet1.aws_security_group.this",
            "module.ec2_instance_subnet1.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet2[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:subnet/subnet-0143c3c71866c8afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0143c3c71866c8afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064255164072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08f0737412a47a5ed",
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:instance/i-0353572979b00c768",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0353572979b00c768",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Kissme",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c51cc361294f338f"
              }
            ],
            "primary_network_interface_id": "eni-0c51cc361294f338f",
            "private_dns": "ip-172-31-23-94.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.94",
            "public_dns": "ec2-13-231-117-237.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.117.237",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e6bd7e71a598c3fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "let it come",
              "nstance_subnet2-20260111052318542700000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0143c3c71866c8afc",
            "tags": {
              "Name": "public_instance_subnet2"
            },
            "tags_all": {
              "Name": "public_instance_subnet2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "public_instance_subnet2"
            },
            "vpc_security_group_ids": [
              "sg-0c36b7d09382fc492",
              "sg-0eec85da177353553"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "i-0353572979b00c768",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "data.aws_security_group.existing_sg",
            "module.ec2_instance_subnet2.aws_iam_instance_profile.this",
            "module.ec2_instance_subnet2.aws_iam_role.this",
            "module.ec2_instance_subnet2.aws_security_group.this",
            "module.ec2_instance_subnet2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance_subnet2.data.aws_partition.current",
            "module.ec2_instance_subnet2.data.aws_ssm_parameter.this",
            "module.ec2_instance_subnet2.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet2[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group/sg-0c36b7d09382fc492",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c36b7d09382fc492",
            "ingress": [],
            "name": "public_instance_subnet2-20260111052435424400000002",
            "name_prefix": "public_instance_subnet2-",
            "owner_id": "064255164072",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_instance_subnet2"
            },
            "tags_all": {
              "Name": "public_instance_subnet2"
            },
            "timeouts": null,
            "vpc_id": "vpc-061ddbfa1a2e0d135"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sg-0c36b7d09382fc492",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "module.ec2_instance_subnet2.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_subnet2[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group-rule/sgr-05d4ed936be8f6c89",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-05d4ed936be8f6c89",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0c36b7d09382fc492",
            "security_group_rule_id": "sgr-05d4ed936be8f6c89",
            "tags": {
              "Name": "public_instance_subnet2-ipv4_default"
            },
            "tags_all": {
              "Name": "public_instance_subnet2-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sgr-05d4ed936be8f6c89",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "module.ec2_instance_subnet2.aws_security_group.this",
            "module.ec2_instance_subnet2.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group-rule/sgr-0b6de5783ae3f884d",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0b6de5783ae3f884d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0c36b7d09382fc492",
            "security_group_rule_id": "sgr-0b6de5783ae3f884d",
            "tags": {
              "Name": "public_instance_subnet2-ipv6_default"
            },
            "tags_all": {
              "Name": "public_instance_subnet2-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sgr-0b6de5783ae3f884d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "module.ec2_instance_subnet2.aws_security_group.this",
            "module.ec2_instance_subnet2.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}